--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Android noto-emoji (KitKat) finder",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +22,6 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "flatmap": "0.0.3",
-    "npm": "^6.2.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
   }
