--- a/deno.json
+++ b/deno.json
@@ -1,23 +1,43 @@
 {
+  "lock": false,
   "tasks": {
-    "dev": "deno run --unstable-kv --allow-net --watch src/main.tsx",
+    "check": "deno fmt --check && deno lint && deno check src/**/*.ts && deno check src/**/*.tsx",
+    "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
+    "manifest": "deno task cli manifest $(pwd)",
+    "start": "deno run -A --unstable-kv --watch=src/static/,src/routes/ src/dev.ts",
+    "build": "deno run -A --unstable-kv src/dev.ts build",
+    "update": "deno run -A -r https://fresh.deno.dev/update ./src",
     "deploy": "deployctl deploy --project suraimu-finder",
-    "deploy-prod": "deployctl deploy --prod --project suraimu-finder"
+    "deploy-prod": "deployctl deploy --prod --project suraimu-finder",
+    "importdata": "deno run --unstable-kv --allow-env --allow-read --allow-net importdata.ts"
+  },
+  "lint": {
+    "rules": {
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
+    }
+  },
+  "imports": {
+    "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "preact": "https://esm.sh/preact@10.22.0",
+    "preact/": "https://esm.sh/preact@10.22.0/",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+    "$std/": "https://deno.land/std@0.216.0/"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxFragmentFactory": "Fragment",
-    "jsxImportSource": "npm:hono@4.6.5/jsx"
+    "jsxImportSource": "preact"
   },
   "deploy": {
     "exclude": [
-      "**/node_modules"
+      "**/node_modules",
+      "**/_fresh/*",
+      "importdata*"
     ],
-    "include": [
-      "deno.json",
-      "src/*.ts",
-      "src/*.tsx"
-    ],
-    "entrypoint": "src/main.tsx"
+    "include": [],
+    "entrypoint": "src/main.ts"
   }
 }
